upload new settings

--- a/Counting Concepts.ipynb
+++ b/Counting Concepts.ipynb
@@ -32929,7 +32929,19 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def dataSplitter():\n",
+    "    import shutil\n",
+    "    path = \"./broden1_224/images/\"\n",
+    "    for q in ['q1', 'q2', 'q3', 'q4']: \n",
+    "        outpath = \"./broden1_224_\" + q + \"/images/\"\n",
+    "        index = pd.read_csv(\"index_\" + q + \".csv\")\n",
+    "        for i, row in index.iterrows():\n",
+    "            print(i)\n",
+    "            shutil.copyfile(path + row['image'], outpath + row['image'])\n",
+    "            shutil.copyfile(path + row[\"object\"], outpath + row[\"object\"])\n",
+    "            "
+   ]
   },
   {
    "cell_type": "code",
