Implemented run all function

--- a/Counting Concepts.ipynb
+++ b/Counting Concepts.ipynb
@@ -32945,6 +32945,294 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image</th>\n",
+       "      <th>split</th>\n",
+       "      <th>ih</th>\n",
+       "      <th>iw</th>\n",
+       "      <th>sh</th>\n",
+       "      <th>sw</th>\n",
+       "      <th>color</th>\n",
+       "      <th>object</th>\n",
+       "      <th>part</th>\n",
+       "      <th>material</th>\n",
+       "      <th>scene</th>\n",
+       "      <th>texture</th>\n",
+       "      <th>objects</th>\n",
+       "      <th>n_objects</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>25271</th>\n",
+       "      <td>ade20k/ADE_train_00015933.jpg</td>\n",
+       "      <td>train</td>\n",
+       "      <td>224</td>\n",
+       "      <td>224</td>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>ade20k/ADE_train_00015933_color.png</td>\n",
+       "      <td>ade20k/ADE_train_00015933_object.png</td>\n",
+       "      <td>ade20k/ADE_train_00015933_part_1.png</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[16, 18]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17483</th>\n",
+       "      <td>ade20k/ADE_train_00006510.jpg</td>\n",
+       "      <td>train</td>\n",
+       "      <td>224</td>\n",
+       "      <td>224</td>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>ade20k/ADE_train_00006510_color.png</td>\n",
+       "      <td>ade20k/ADE_train_00006510_object.png</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>955.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[2, 87]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37349</th>\n",
+       "      <td>pascal/2009_000026.jpg</td>\n",
+       "      <td>train</td>\n",
+       "      <td>224</td>\n",
+       "      <td>224</td>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>pascal/2009_000026_color.png</td>\n",
+       "      <td>pascal/2009_000026_object.png</td>\n",
+       "      <td>pascal/2009_000026_part.png</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[128, 224]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41062</th>\n",
+       "      <td>pascal/2008_005573.jpg</td>\n",
+       "      <td>train</td>\n",
+       "      <td>224</td>\n",
+       "      <td>224</td>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>pascal/2008_005573_color.png</td>\n",
+       "      <td>pascal/2008_005573_object.png</td>\n",
+       "      <td>pascal/2008_005573_part.png</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[13, 154]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56176</th>\n",
+       "      <td>pascal/2009_003698.jpg</td>\n",
+       "      <td>val</td>\n",
+       "      <td>224</td>\n",
+       "      <td>224</td>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>pascal/2009_003698_color.png</td>\n",
+       "      <td>pascal/2009_003698_object.png</td>\n",
+       "      <td>pascal/2009_003698_part.png</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[12, 105]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45577</th>\n",
+       "      <td>pascal/2008_006561.jpg</td>\n",
+       "      <td>val</td>\n",
+       "      <td>224</td>\n",
+       "      <td>224</td>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>pascal/2008_006561_color.png</td>\n",
+       "      <td>pascal/2008_006561_object.png</td>\n",
+       "      <td>pascal/2008_006561_part.png</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[14, 105]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48997</th>\n",
+       "      <td>ade20k/ADE_train_00013179.jpg</td>\n",
+       "      <td>val</td>\n",
+       "      <td>224</td>\n",
+       "      <td>224</td>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>ade20k/ADE_train_00013179_color.png</td>\n",
+       "      <td>ade20k/ADE_train_00013179_object.png</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[16, 35]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5342</th>\n",
+       "      <td>pascal/2008_006384.jpg</td>\n",
+       "      <td>train</td>\n",
+       "      <td>224</td>\n",
+       "      <td>224</td>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>pascal/2008_006384_color.png</td>\n",
+       "      <td>pascal/2008_006384_object.png</td>\n",
+       "      <td>pascal/2008_006384_part.png</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[16, 105]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46656</th>\n",
+       "      <td>pascal/2010_003429.jpg</td>\n",
+       "      <td>val</td>\n",
+       "      <td>224</td>\n",
+       "      <td>224</td>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>pascal/2010_003429_color.png</td>\n",
+       "      <td>pascal/2010_003429_object.png</td>\n",
+       "      <td>pascal/2010_003429_part.png</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[33, 243]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28079</th>\n",
+       "      <td>pascal/2009_005218.jpg</td>\n",
+       "      <td>train</td>\n",
+       "      <td>224</td>\n",
+       "      <td>224</td>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>pascal/2009_005218_color.png</td>\n",
+       "      <td>pascal/2009_005218_object.png</td>\n",
+       "      <td>pascal/2009_005218_part.png</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[13, 154]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               image  split   ih   iw   sh   sw  \\\n",
+       "25271  ade20k/ADE_train_00015933.jpg  train  224  224  112  112   \n",
+       "17483  ade20k/ADE_train_00006510.jpg  train  224  224  112  112   \n",
+       "37349         pascal/2009_000026.jpg  train  224  224  112  112   \n",
+       "41062         pascal/2008_005573.jpg  train  224  224  112  112   \n",
+       "56176         pascal/2009_003698.jpg    val  224  224  112  112   \n",
+       "45577         pascal/2008_006561.jpg    val  224  224  112  112   \n",
+       "48997  ade20k/ADE_train_00013179.jpg    val  224  224  112  112   \n",
+       "5342          pascal/2008_006384.jpg  train  224  224  112  112   \n",
+       "46656         pascal/2010_003429.jpg    val  224  224  112  112   \n",
+       "28079         pascal/2009_005218.jpg  train  224  224  112  112   \n",
+       "\n",
+       "                                     color  \\\n",
+       "25271  ade20k/ADE_train_00015933_color.png   \n",
+       "17483  ade20k/ADE_train_00006510_color.png   \n",
+       "37349         pascal/2009_000026_color.png   \n",
+       "41062         pascal/2008_005573_color.png   \n",
+       "56176         pascal/2009_003698_color.png   \n",
+       "45577         pascal/2008_006561_color.png   \n",
+       "48997  ade20k/ADE_train_00013179_color.png   \n",
+       "5342          pascal/2008_006384_color.png   \n",
+       "46656         pascal/2010_003429_color.png   \n",
+       "28079         pascal/2009_005218_color.png   \n",
+       "\n",
+       "                                     object  \\\n",
+       "25271  ade20k/ADE_train_00015933_object.png   \n",
+       "17483  ade20k/ADE_train_00006510_object.png   \n",
+       "37349         pascal/2009_000026_object.png   \n",
+       "41062         pascal/2008_005573_object.png   \n",
+       "56176         pascal/2009_003698_object.png   \n",
+       "45577         pascal/2008_006561_object.png   \n",
+       "48997  ade20k/ADE_train_00013179_object.png   \n",
+       "5342          pascal/2008_006384_object.png   \n",
+       "46656         pascal/2010_003429_object.png   \n",
+       "28079         pascal/2009_005218_object.png   \n",
+       "\n",
+       "                                       part material  scene texture  \\\n",
+       "25271  ade20k/ADE_train_00015933_part_1.png      NaN    0.0     NaN   \n",
+       "17483                                   NaN      NaN  955.0     NaN   \n",
+       "37349           pascal/2009_000026_part.png      NaN    NaN     NaN   \n",
+       "41062           pascal/2008_005573_part.png      NaN    NaN     NaN   \n",
+       "56176           pascal/2009_003698_part.png      NaN    NaN     NaN   \n",
+       "45577           pascal/2008_006561_part.png      NaN    NaN     NaN   \n",
+       "48997                                   NaN      NaN    NaN     NaN   \n",
+       "5342            pascal/2008_006384_part.png      NaN    NaN     NaN   \n",
+       "46656           pascal/2010_003429_part.png      NaN    NaN     NaN   \n",
+       "28079           pascal/2009_005218_part.png      NaN    NaN     NaN   \n",
+       "\n",
+       "          objects  n_objects  \n",
+       "25271    [16, 18]          1  \n",
+       "17483     [2, 87]          1  \n",
+       "37349  [128, 224]          1  \n",
+       "41062   [13, 154]          1  \n",
+       "56176   [12, 105]          1  \n",
+       "45577   [14, 105]          1  \n",
+       "48997    [16, 35]          1  \n",
+       "5342    [16, 105]          1  \n",
+       "46656   [33, 243]          1  \n",
+       "28079   [13, 154]          1  "
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q1.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
