--- a/Splitting dataset.ipynb
+++ b/Splitting dataset.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy import misc.imread"
+    "from scipy import misc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -26,10 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "index = pd.read_csv(path + \"index.csv\")\n",
@@ -39,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -79,77 +75,77 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>53149</th>\n",
-       "      <td>ade20k/ADE_train_00007965.jpg</td>\n",
-       "      <td>val</td>\n",
-       "      <td>224</td>\n",
-       "      <td>224</td>\n",
-       "      <td>112</td>\n",
-       "      <td>112</td>\n",
-       "      <td>ade20k/ADE_train_00007965_color.png</td>\n",
-       "      <td>ade20k/ADE_train_00007965_object.png</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1142.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49040</th>\n",
-       "      <td>ade20k/ADE_train_00012421.jpg</td>\n",
-       "      <td>val</td>\n",
-       "      <td>224</td>\n",
-       "      <td>224</td>\n",
-       "      <td>112</td>\n",
-       "      <td>112</td>\n",
-       "      <td>ade20k/ADE_train_00012421_color.png</td>\n",
-       "      <td>ade20k/ADE_train_00012421_object.png</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5421</th>\n",
-       "      <td>ade20k/ADE_train_00007230.jpg</td>\n",
+       "      <th>14955</th>\n",
+       "      <td>ade20k/ADE_val_00001771.jpg</td>\n",
        "      <td>train</td>\n",
        "      <td>224</td>\n",
        "      <td>224</td>\n",
        "      <td>112</td>\n",
        "      <td>112</td>\n",
-       "      <td>ade20k/ADE_train_00007230_color.png</td>\n",
-       "      <td>ade20k/ADE_train_00007230_object.png</td>\n",
-       "      <td>ade20k/ADE_train_00007230_part_1.png</td>\n",
+       "      <td>ade20k/ADE_val_00001771_color.png</td>\n",
+       "      <td>ade20k/ADE_val_00001771_object.png</td>\n",
+       "      <td>ade20k/ADE_val_00001771_part_1.png</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>186.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41871</th>\n",
-       "      <td>dtd/meshed_0055.jpg</td>\n",
+       "      <th>11372</th>\n",
+       "      <td>pascal/2009_000962.jpg</td>\n",
        "      <td>train</td>\n",
        "      <td>224</td>\n",
        "      <td>224</td>\n",
        "      <td>112</td>\n",
        "      <td>112</td>\n",
-       "      <td>dtd/meshed_0055_color.png</td>\n",
+       "      <td>pascal/2009_000962_color.png</td>\n",
+       "      <td>pascal/2009_000962_object.png</td>\n",
+       "      <td>pascal/2009_000962_part.png</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>337</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48426</th>\n",
-       "      <td>opensurfaces/101935.jpg</td>\n",
-       "      <td>val</td>\n",
+       "      <th>27479</th>\n",
+       "      <td>ade20k/ADE_train_00016961.jpg</td>\n",
+       "      <td>train</td>\n",
        "      <td>224</td>\n",
        "      <td>224</td>\n",
        "      <td>112</td>\n",
        "      <td>112</td>\n",
-       "      <td>opensurfaces/101935_color.png</td>\n",
+       "      <td>ade20k/ADE_train_00016961_color.png</td>\n",
+       "      <td>ade20k/ADE_train_00016961_object.png</td>\n",
+       "      <td>ade20k/ADE_train_00016961_part_1.png;ade20k/AD...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17704</th>\n",
+       "      <td>ade20k/ADE_train_00001875.jpg</td>\n",
+       "      <td>train</td>\n",
+       "      <td>224</td>\n",
+       "      <td>224</td>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>ade20k/ADE_train_00001875_color.png</td>\n",
+       "      <td>ade20k/ADE_train_00001875_object.png</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>opensurfaces/101935_material.png</td>\n",
+       "      <td>772.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7632</th>\n",
+       "      <td>opensurfaces/22742.jpg</td>\n",
+       "      <td>train</td>\n",
+       "      <td>224</td>\n",
+       "      <td>224</td>\n",
+       "      <td>112</td>\n",
+       "      <td>112</td>\n",
+       "      <td>opensurfaces/22742_color.png</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>opensurfaces/22742_material.png</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -159,42 +155,42 @@
       ],
       "text/plain": [
        "                               image  split   ih   iw   sh   sw  \\\n",
-       "53149  ade20k/ADE_train_00007965.jpg    val  224  224  112  112   \n",
-       "49040  ade20k/ADE_train_00012421.jpg    val  224  224  112  112   \n",
-       "5421   ade20k/ADE_train_00007230.jpg  train  224  224  112  112   \n",
-       "41871            dtd/meshed_0055.jpg  train  224  224  112  112   \n",
-       "48426        opensurfaces/101935.jpg    val  224  224  112  112   \n",
+       "14955    ade20k/ADE_val_00001771.jpg  train  224  224  112  112   \n",
+       "11372         pascal/2009_000962.jpg  train  224  224  112  112   \n",
+       "27479  ade20k/ADE_train_00016961.jpg  train  224  224  112  112   \n",
+       "17704  ade20k/ADE_train_00001875.jpg  train  224  224  112  112   \n",
+       "7632          opensurfaces/22742.jpg  train  224  224  112  112   \n",
        "\n",
        "                                     color  \\\n",
-       "53149  ade20k/ADE_train_00007965_color.png   \n",
-       "49040  ade20k/ADE_train_00012421_color.png   \n",
-       "5421   ade20k/ADE_train_00007230_color.png   \n",
-       "41871            dtd/meshed_0055_color.png   \n",
-       "48426        opensurfaces/101935_color.png   \n",
+       "14955    ade20k/ADE_val_00001771_color.png   \n",
+       "11372         pascal/2009_000962_color.png   \n",
+       "27479  ade20k/ADE_train_00016961_color.png   \n",
+       "17704  ade20k/ADE_train_00001875_color.png   \n",
+       "7632          opensurfaces/22742_color.png   \n",
        "\n",
        "                                     object  \\\n",
-       "53149  ade20k/ADE_train_00007965_object.png   \n",
-       "49040  ade20k/ADE_train_00012421_object.png   \n",
-       "5421   ade20k/ADE_train_00007230_object.png   \n",
-       "41871                                   NaN   \n",
-       "48426                                   NaN   \n",
+       "14955    ade20k/ADE_val_00001771_object.png   \n",
+       "11372         pascal/2009_000962_object.png   \n",
+       "27479  ade20k/ADE_train_00016961_object.png   \n",
+       "17704  ade20k/ADE_train_00001875_object.png   \n",
+       "7632                                    NaN   \n",
        "\n",
-       "                                       part                          material  \\\n",
-       "53149                                   NaN                               NaN   \n",
-       "49040                                   NaN                               NaN   \n",
-       "5421   ade20k/ADE_train_00007230_part_1.png                               NaN   \n",
-       "41871                                   NaN                               NaN   \n",
-       "48426                                   NaN  opensurfaces/101935_material.png   \n",
+       "                                                    part  \\\n",
+       "14955                 ade20k/ADE_val_00001771_part_1.png   \n",
+       "11372                        pascal/2009_000962_part.png   \n",
+       "27479  ade20k/ADE_train_00016961_part_1.png;ade20k/AD...   \n",
+       "17704                                                NaN   \n",
+       "7632                                                 NaN   \n",
        "\n",
-       "        scene texture  \n",
-       "53149  1142.0     NaN  \n",
-       "49040     NaN     NaN  \n",
-       "5421    186.0     NaN  \n",
-       "41871     NaN     337  \n",
-       "48426     NaN     NaN  "
+       "                              material  scene texture  \n",
+       "14955                              NaN    0.0     NaN  \n",
+       "11372                              NaN    NaN     NaN  \n",
+       "27479                              NaN   59.0     NaN  \n",
+       "17704                              NaN  772.0     NaN  \n",
+       "7632   opensurfaces/22742_material.png    NaN     NaN  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +444,7 @@
        "9    NaN     NaN  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -660,7 +656,7 @@
        "29             1  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,22 +678,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>number</th>\n",
+       "      <th>name</th>\n",
+       "      <th>category</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>coverage</th>\n",
+       "      <th>syns</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>black-c</td>\n",
+       "      <td>color(62358)</td>\n",
+       "      <td>62358</td>\n",
+       "      <td>11135.320474</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>grey-c</td>\n",
+       "      <td>color(62310)</td>\n",
+       "      <td>62310</td>\n",
+       "      <td>12712.843129</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>white-c</td>\n",
+       "      <td>color(62054)</td>\n",
+       "      <td>62054</td>\n",
+       "      <td>5778.038204</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>brown-c</td>\n",
+       "      <td>color(61583)</td>\n",
+       "      <td>61583</td>\n",
+       "      <td>14549.652454</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>green-c</td>\n",
+       "      <td>color(61508)</td>\n",
+       "      <td>61508</td>\n",
+       "      <td>5049.989735</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(1197, 6)"
+       "   number     name      category  frequency      coverage syns\n",
+       "0       1  black-c  color(62358)      62358  11135.320474  NaN\n",
+       "1       2   grey-c  color(62310)      62310  12712.843129  NaN\n",
+       "2       3  white-c  color(62054)      62054   5778.038204  NaN\n",
+       "3       4  brown-c  color(61583)      61583  14549.652454  NaN\n",
+       "4       5  green-c  color(61508)      61508   5049.989735  NaN"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "label.shape"
+    "label.shape\n",
+    "label.head()"
    ]
   },
   {
